--- a/STUŽKOVÁ/MOje_projekty-stuzkove.html
+++ b/STUŽKOVÁ/MOje_projekty-stuzkove.html
@@ -13,7 +13,7 @@
         <a href="../OSLAVY/Oslavy.html">Oslavy</a>
       </li>
       <li class="nav-item">
-        <a href="../FIREMNÉ%20VEČIERKY/Firemné%20večierky.html">Firemné Večierky</a>
+        <a href="../FIREMNÉ VEČIERKY/hlavná-firemná.html">Firemné Večierky</a>
       </li>
       <li class="nav-item">
         <a href="../ROZLÚČKA%20SO%20SLOBODOU/rozlúčka%20so%20slobodou.html">Rozlúčka so slobodou</a>
@@ -36,40 +36,41 @@
 <h1>Naše projekty</h1>
 <div class="gallery">
   <div class="image img">
-    <img src="img/project/img1.jpg.jpg" alt="Projekt 1">
+    <img src="img-stužková/Stužková/project-stužkové/img1.jpg.jpg" alt="Projekt 1">
   </div>
   <div class="image">
-    <img src="img/project/img2.jpg.jpg" alt="Projekt 2">
+    <img src="img-stužková/Stužková/project-stužkové/img2.jpg.jpg" alt="Projekt 2">
   </div>
   <div class="image">
-    <img src="img/project/img3.jpg.jpg" alt="Projekt 3">
+    <img src="img-stužková/Stužková/project-stužkové/img3.jpg.jpg" alt="Projekt 3">
   </div>
   <div class="image">
-    <img src="img/project/img4.jpg.jpg" alt="Projekt 4">
+    <img src="img-stužková/Stužková/project-stužkové/img4.jpg.jpg" alt="Projekt 4">
   </div>
   <div class="image">
-    <img src="img/project/img5.jpg.jpg" alt="Projekt 5">
+    <img src="img-stužková/Stužková/project-stužkové/img5.jpg.jpg" alt="Projekt 5">
   </div>
   <div class="image">
-    <img src="img/project/img6.jpg.jpg" alt="Projekt 6">
+    <img src="img-stužková/Stužková/project-stužkové/img6.jpg.jpg" alt="Projekt 6">
   </div>
   <div class="image">
-    <img src="img/project/img7.jpg.jpg" alt="Projekt 7">
+    <img src="img-stužková/Stužková/project-stužkové/img7.jpg.jpg" alt="Projekt 7">
   </div>
   <div class="image">
-    <img src="img/project/img8.jpg.jpg" alt="Projekt 8">
+    <img src="img-stužková/Stužková/project-stužkové/img8.jpg.jpg" alt="Projekt 8">
   </div>
   <div class="image">
-    <img src="img/project/img9.jpg.jpg" alt="Projekt 9">
+    <img src="img-stužková/Stužková/project-stužkové/img9.jpg.jpg" alt="Projekt 9">
   </div>
   <div class="image">
-    <img src="img/project/img10.jpg.jpg" alt="Projekt 10">
+    <img src="img-stužková/Stužková/project-stužkové/img10.jpg.jpg" alt="Projekt 10">
   </div>
   <div class="image">
-    <img src="img/project/img11.jpg.jpg" alt="Projekt 11">
+    <img src="img-stužková/Stužková/project-stužkové/img11.jpg.jpg" alt="Projekt 11">
+
   </div>
   <div class="image">
-    <img src="img/project/img12.jpg.jpg" alt="Projekt 12">
+    <img src="img-stužková/Stužková/project-stužkové/img12.jpg.jpg" alt="Projekt 12">
   </div>
 </div>
 </body>
