--- a/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
+++ b/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
@@ -13,7 +13,7 @@
         <a href="../OSLAVY/Oslavy.html">Oslavy</a>
       </li>
       <li class="nav-item">
-        <a href="../FIREMNÉ%20VEČIERKY/Firemné%20večierky.html">Firemné Večierky</a>
+        <a href="../FIREMNÉ VEČIERKY/hlavná-firemná.html.html">Firemné Večierky</a>
       </li>
       <li class="nav-item">
         <a href="../ROZLÚČKA%20SO%20SLOBODOU/rozlúčka%20so%20slobodou.html">Rozlúčka so slobodou</a>
@@ -48,7 +48,7 @@
   <h1>Obleky na stredoškolskú stužkovú</h1>
 
   <div class="suit">
-    <img src="img/obleky/obrazok1.jpg" alt="Klasický oblek">
+    <img src="img-stužková/Stužková/obleky-stužkové/obrazok1.jpg" alt="Klasický oblek">
     <div class="suit-info">
       <h2>Klasický oblek</h2>
       <p>Je to najpopulárnejší a najuniverzálnejší druh obleku. Hodí sa na väčšinu formálnych udalostí.</p>
@@ -57,7 +57,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/obleky/obrazok2.jpg" alt="Smoking">
+    <img src="img-stužková/Stužková/obleky-stužkové/obrazok2.jpg" alt="Smoking">
     <div class="suit-info">
       <h2>Smoking</h2>
       <p>Formálny oblek, ktorý sa obvykle nosí na večerné udalosti a formálne príležitosti. </p>
@@ -66,7 +66,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/obleky/obrazok3.jpg" alt="Oblek 3">
+    <img src="img-stužková/Stužková/obleky-stužkové/obrazok3.jpg" alt="Oblek 3">
     <div class="suit-info">
       <h2>Frak</h2>
       <p>Je to najformálnejší typ obleku. Obvykle sa nosí na veľmi formálnych udalostiach, ako sú plesy alebo galavečere. </p>
@@ -75,7 +75,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/obleky/obrazok4.jpg" alt="Oblek 4">
+    <img src="img-stužková/Stužková/obleky-stužkové/obrazok4.jpg" alt="Oblek 4">
     <div class="suit-info">
       <h2>Oblek s dvojitým radom knoflíkov</h2>
       <p>Tento štýl obleku má sako s dvojitým radom knoflíkov na prednej strane. Je to elegantný a štýlový oblek vhodný na rôzne formálne príležitosti.</p>
@@ -84,7 +84,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/obleky/obrazok5.jpg" alt="Oblek 5">
+    <img src="img-stužková/Stužková/obleky-stužkové/obrazok5.jpg" alt="Oblek 5">
     <div class="suit-info">
       <h2>Oblek s tromi knoflíkmi</h2>
       <p>Tento typ obleku má sako s tromi knoflíkmi na prednej strane. Je to moderná variácia klasického obleku.</p>
@@ -93,7 +93,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/obleky/obrazok6.jpg" alt="Oblek 6">
+    <img src="img-stužková/Stužková/obleky-stužkové/obrazok6.jpg" alt="Oblek 6">
     <div class="suit-info">
       <h2>Sako a nohavice oddelene</h2>
       <p>Niekedy môžete nosiť sako a nohavice oddelene, čo vytvára uvoľnenejší a menej formálny vzhľad. Tento štýl je vhodný na menej formálne udalosti a na každodenné nosenie.</p>
@@ -110,7 +110,7 @@
   <h1>Šaty na stužkovú</h1>
 
   <div class="suit">
-    <img src="img/saty/obrazok7.jpg" alt="Koktailové šaty">
+    <img src="img-stužková/Stužková/saty-stužkové/obrazok7.jpg" alt="Koktailové šaty">
     <div class="suit-info">
       <h2>Koktailové šaty</h2>
       <p>Tieto šaty sú obvykle elegantné a formálne, ale nie príliš nápadné. Vhodné sú pre väčšinu stužkových večierkov a poskytujú štýlový vzhľad.</p>
@@ -119,7 +119,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/saty/obrazok8.jpg" alt="Empírové šaty">
+    <img src="img-stužková/Stužková/saty-stužkové/obrazok8.jpg" alt="Empírové šaty">
     <div class="suit-info">
       <h2>Empírové šaty</h2>
       <p>Empírové šaty majú vysoký pás a volnú sukňu, ktorá pada na dlhšej dĺžke. Sú veľmi elegantné a pôsobia romanticky.</p>
@@ -128,7 +128,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/saty/obrazok9.jpg" alt="Šaty s korzetom">
+    <img src="img-stužková/Stužková/saty-stužkové/obrazok9.jpg" alt="Šaty s korzetom">
     <div class="suit-info">
       <h2>Šaty s korzetom</h2>
       <p> Ak chcete zdôrazniť svoju postavu, šaty s korzetom môžu byť skvelou voľbou. Korzet dokáže vytvoriť ilúziu úzkejších bokov a zvýrazniť vašu siluetu.</p>
@@ -137,7 +137,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/saty/obrazok10.jpg" alt="Princess dress 4">
+    <img src="img-stužková/Stužková/saty-stužkové/obrazok10.jpg" alt="Princess dress 4">
     <div class="suit-info">
       <h2>Princess dress</h2>
       <p>Tieto šaty majú zvyčajne rozšírenú sukňu a úzky pás, čo vytvára pôsobivý efekt. Sú veľmi elegantné a vhodné pre špeciálne príležitosti.</p>
@@ -146,7 +146,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/saty/obrazok11.jpg" alt="Šaty typu wrap">
+    <img src="img-stužková/Stužková/saty-stužkové/obrazok11.jpg" alt="Šaty typu wrap">
     <div class="suit-info">
       <h2>Šaty typu wrap</h2>
       <p>Tento typ šiat má krížový strih a väčšinou majú viazaciu mašľu alebo pásik, ktorý sa uväzuje na boku. Sú pohodlné a elegantné zároveň.</p>
@@ -155,7 +155,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/saty/obrazok12.jpg" alt="Šaty s off-shoulder ramienkami">
+    <img src="img-stužková/Stužková/saty-stužkové/obrazok12.jpg" alt="Šaty s off-shoulder ramienkami">
     <div class="suit-info">
       <h2>Šaty s off-shoulder ramienkami</h2>
       <p> Tieto šaty majú ramienka, ktoré sú posunuté na boky, odhalujúc ramená. Tento štýl je veľmi ženský a pôsobivý.</p>
@@ -174,7 +174,7 @@
   <h1>Stužky</h1>
 
   <div class="suit">
-    <img src="img/stuzky/obrazok13.jpg" alt="Slučka stužka">
+    <img src="img-stužková/Stužková/stuzky-stuškové/obrazok13.jpg" alt="Slučka stužka">
     <div class="suit-info">
       <h2>Slučky stužka</h2>
       <p>Tvar stužky na stužkovú slučku môže byť jednoduchý, no elegantný. </p>
@@ -183,7 +183,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/stuzky/obrazok14.jpg" alt="Mašľa stužka">
+    <img src="img-stužková/Stužková/stuzky-stuškové/obrazok14.jpg" alt="Mašľa stužka">
     <div class="suit-info">
       <h2>Mašla stužka</h2>
       <p>Tento tvar je obvykle najčastejší a najtradičnejší. Stužka je zviazaná do mašle s dvoma rovnými cípami a dvoma zákrutami.</p>
@@ -192,7 +192,7 @@
   </div>
 
   <div class="suit">
-    <img src="img/stuzky/obrazok15.jpg" alt="Kravata stužka">
+    <img src="img-stužková/Stužková/stuzky-stuškové/obrazok15.jpg" alt="Kravata stužka">
     <div class="suit-info">
       <h2>Kravata stužka</h2>
       <p>Tvar stužky na stužkovú kravata môže byť charakteristický svojou jednoduchosťou a elegantnosťou.</p>
