--- a/STUŽKOVÁ/hlavna-stuzkove.html
+++ b/STUŽKOVÁ/hlavna-stuzkove.html
@@ -286,7 +286,7 @@
 
 <body>
 <header class="header">
-  <img class="logo" src="../logo/logo1.png" alt="Apple Logo"
+  <img  src="../logo/logo1.png" alt="Apple Logo"
        style="width: 40px !important;
               height: 50px !important;">
   <ul class="nav">
@@ -319,30 +319,21 @@
   </li>
   <li class="nav-item-body" >
 
-  <li><a href="obleky_na_stuzkovu.html">Produkty</a></li>
-    <div class="scrollable-content-body">
-      <ul class="sub-nav-body">
-        <li><a href="obleky_na_stuzkovu.html">Mužské obleky</a></li>
-        <li>
+  <li><a href="obleky_na_stuzkovu-stuzkove.html">Produkty</a></li>
 
-
-        <li><a href="#">Spoločenské šaty</a></li>
-        <li><a href="#">Doplnky na stužkovú</a></li>
-      </ul>
-    </div>
   </li>
   <li class="nav-item-body" >
 
-    <a href="Sluzby.html">Služby</a>
+    <a href="catering-stuzkove.html">Služby</a>
 
 
     </div>
   </li>
   <li class="nav-item-body">
-    <a href="MOje_projekty.html">Projects</a>
+    <a href="MOje_projekty-stuzkove.html">Projects</a>
   </li>
   <li class="nav-item-body">
-    <a href="Rezervacia.html">Formulár</a>
+    <a href="Rezervacia-stuzkove.html">Formulár</a>
   </li>
 
 
