--- a/STUŽKOVÁ/Rezervacia-stuzkove.html
+++ b/STUŽKOVÁ/Rezervacia-stuzkove.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="en">
 <head>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style-stuzkove.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
