--- a/STUŽKOVÁ/catering-stuzkove.html
+++ b/STUŽKOVÁ/catering-stuzkove.html
@@ -5,62 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Obleky na stužkovú</title>
   <link rel="stylesheet" href="style-stuzkove.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: rgba(34, 72, 34, 0.96);
-    }
-    .container {
-      width: 80%;
-      margin: 20px auto;
-      background-color: #7e681f;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: #7e681f;
-    }
-    h1 {
-      text-align: center;
-      color: #7e681f;
-    }
-    .suit {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-      border-bottom: 5px solid #7e681f;
-      padding-bottom: 20px;
-    }
-    .suit img {
-      max-width: 200px;
-      max-height: 300px;
-    }
-    .suit-info {
-      flex: 1;
-      padding-left: 20px;
-    }
-    .suit-info h2 {
-      margin-top: 0;
-      color: #7e681f;
-    }
-    .suit-info p {
-      color: #7e681f;
-    }
-    .suit-info .price {
-      color: #7e681f;
-      font-weight: bold;
-    }
 
-
-  </style>
 </head>
 <body>
 
 <header class="header">
   <img class="logo" src="../logo/logo1.png" alt="Apple Logo"
-       style="width: 40px !important;
-              height: 50px !important;">
+
   <ul class="nav">
     <li class="nav-item">
       <a href="../SVADBA/hlavna-svadba.html">Svadby</a>
@@ -85,7 +36,7 @@
   <h1>Ketering</h1>
   <p style="color: #7e681f;">Ponúkame vám možnosť usporiadania nezabudnuteľného stužkového večera s vysoko kvalitným jedlom a profesionálnym servisom. S našou vášňou pre gastronómiu a dlhoročnými skúsenosťami sa postaráme o to, aby stužková bola skutočne špeciálna pre vás a vašich spolužiakov.</p>
 
-  <h2 style="color: #7e681f;">Predjedlá</h2>
+  <h2 >Predjedlá</h2>
 
   <div class="suit">
     <img src="img-stužková/Stužková/katering-stužkové/Obrázok16.jpg" alt="Obrázok16">
@@ -110,7 +61,8 @@
       <p class="price">Cena: 4,90 €</p>
     </div>
   </div>
-  <h2 style="color: #7e681f;">Polievky</h2>
+
+  <h2>Polievky</h2>
   <div class="suit">
     <img src="img-stužková/Stužková/katering-stužkové/obrazok19.jpg" alt="Oblek 4">
     <div class="suit-info">
@@ -126,7 +78,9 @@
       <p class="price">Cena: 3,50 €</p>
     </div>
   </div>
-  <h2 style="color: #7e681f;">Hlavné jedlá</h2>
+
+  <h2>Hlavné jedlá</h2>
+
   <div class="suit">
     <img src="img-stužková/Stužková/katering-stužkové/obrazok21.jpg" alt="Oblek 6">
     <div class="suit-info">
@@ -155,60 +109,8 @@
 
 </div>
 
-<title>Koláče</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #1b3a1b;
-  }
-  .container {
-    width: 80%;
-    margin: 20px auto;
-    background-color: #1b3a1b;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  h1 {
-    text-align: center;
-    color: #7e681f;
-  }
-  .suit {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    border-bottom: 5px solid #7e681f;
-    padding-bottom: 20px;
-  }
-  .suit img {
-    max-width: 200px;
-    max-height: 300px;
-  }
-  .suit-info {
-    flex: 1;
-    padding-left: 20px;
-  }
-  .suit-info h2 {
-    margin-top: 0;
-    color: #7e681f;
-  }
-  .suit-info p {
-    color: #7e681f;
-  }
-  .suit-info .price {
-    color: #7e681f;
-    font-weight: bold;
-  }
-</style>
-</head>
-
 <div class="container">
   <h1>Koláče</h1>
-
-
 
   <div class="suit">
     <img src="img-stužková/Stužková/kolace-stužkové/obrazok24.jpg" alt="Empírové šaty">
@@ -268,26 +170,26 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1b3a1b;
+    background-color: #abd0ab;
   }
   .container {
     width: 80%;
     margin: 20px auto;
-    background-color: #1b3a1b;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 50px #7e681f
+    box-shadow: 0 0 50px #8c7e51
   }
   h1 {
     text-align: center;
-    color: #7e681f;
+    color: #000000;
   }
   .suit {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-    border-bottom: 1px solid #1b3a1b;
+    border-bottom: 1px solid #304b30;
     padding-bottom: 20px;
   }
   .suit img {
@@ -300,13 +202,13 @@
   }
   .suit-info h2 {
     margin-top: 0;
-    color: #7e681f;
+    color: #000000;
   }
   .suit-info p {
-    color: #7e681f;
+    color: #000000;
   }
   .suit-info .price {
-    color: #7e681f;
+    color: #000000;
     font-weight: bold;
   }
   /* Pridanie čiarky pod obrázky */
