final changes of css

--- a/STUŽKOVÁ/catering-stuzkove.html
+++ b/STUŽKOVÁ/catering-stuzkove.html
@@ -10,12 +10,12 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #abd0ab;
+      background-color: #e7eae7;
     }
     .container {
       width: 80%;
       margin: 20px auto;
-      background-color: #ffffff;
+      background-color: #abd0ab;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 0 50px #8c7e51
@@ -199,7 +199,7 @@
 
 <div class="container">
   <h1>Ketering</h1>
-  <p style="color: #7e681f;">Ponúkame vám možnosť usporiadania nezabudnuteľného stužkového večera s vysoko kvalitným jedlom a profesionálnym servisom. S našou vášňou pre gastronómiu a dlhoročnými skúsenosťami sa postaráme o to, aby stužková bola skutočne špeciálna pre vás a vašich spolužiakov.</p>
+
 
   <h2 >Predjedlá</h2>
 
