href na hlavnú stránku cez logo

--- a/FIREMNÉ VEČIERKY/služby-firemné.html
+++ b/FIREMNÉ VEČIERKY/služby-firemné.html
@@ -30,7 +30,10 @@
 <div class="top">
     <div class="row padding black">
         <div class="col-top m3-top ">
+          <a href="../hlavná%20stránka.html">
             <img src="../logo/logo1.png" class="block button" style="width: 79px!important;" alt="">
+          </a>
+
         </div>
         <div class="col m3 ">
             <a href="../STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
