--- a/STUŽKOVÁ/MOje_projekty-stuzkove.html
+++ b/STUŽKOVÁ/MOje_projekty-stuzkove.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <header class="header">
-    <img  src="../logo/logo1.png" alt="Apple Logo"
-         style="width: 40px !important;
-              height: 50px !important;">
+    <a href="../hlavná%20stránka.html">
+      <img class="logo" src="../logo/logo1.png" alt="Apple Logo">
+    </a>
     <ul class="nav">
       <li class="nav-item">
         <a href="../SVADBA/svadba.html">Svadby</a>
