--- a/STUŽKOVÁ/catering-stuzkove.html
+++ b/STUŽKOVÁ/catering-stuzkove.html
@@ -10,7 +10,10 @@
 <body>
 
 <header class="header">
-  <img class="logo" src="../logo/logo1.png" alt="Apple Logo"
+  <a href="../hlavná%20stránka.html">
+    <img class="logo" src="../logo/logo1.png" alt="Apple Logo">
+  </a>
+
 
   <ul class="nav">
     <li class="nav-item">
