--- a/STUŽKOVÁ/hlavna-stuzkove.html
+++ b/STUŽKOVÁ/hlavna-stuzkove.html
@@ -286,9 +286,9 @@
 
 <body>
 <header class="header">
-  <img  src="../logo/logo1.png" alt="Apple Logo"
-       style="width: 40px !important;
-              height: 50px !important;">
+  <a href="../hlavná%20stránka.html">
+    <img class="logo" src="../logo/logo1.png" alt="Apple Logo">
+  </a>
   <ul class="nav">
     <li class="nav-item">
       <a href="../SVADBA/hlavna-svadba.html">Svadby</a>
