--- a/FIREMNÉ VEČIERKY/AJAX.html
+++ b/FIREMNÉ VEČIERKY/AJAX.html
@@ -26,11 +26,13 @@
       border-collapse: collapse;
       width: 100%;
     }
+
     th, td {
       border: 1px solid black;
       padding: 8px;
       text-align: left;
     }
+
     th {
       background-color: #f2f2f2;
     }
@@ -132,7 +134,7 @@
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
   </div>
-
+</div>
 <h1>Team Members</h1>
 <table id="teamTable">
   <thead>
