--- a/FIREMNÉ VEČIERKY/AJAX.html
+++ b/FIREMNÉ VEČIERKY/AJAX.html
@@ -78,7 +78,7 @@
     <span class="tag">Open from 6am to 5pm</span>
   </div>
   <div class="display-middle center">
-    <span class="text-white" style="font-size:90px">Firemné<br>večierky</span>
+    <span class="text-white" style="font-size:90px">F</span>
   </div>
   <div class="display-bottomright center padding-large">
     <span class="text-white">15 Adr street, 5015</span>
