--- a/FIREMNÉ VEČIERKY/AJAX.html
+++ b/FIREMNÉ VEČIERKY/AJAX.html
@@ -50,7 +50,7 @@
   <div class="row padding black">
     <div class="col-top m3-top ">
       <a href="../hlavná%20stránka.html">
-        <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
+        <img src="../logo/logo1.png" class="block button" style="width: 79px!important;">
       </a>
 
     </div>
@@ -78,7 +78,7 @@
     <span class="tag">Open from 6am to 5pm</span>
   </div>
   <div class="display-middle center">
-    <span class="text-white" style="font-size:90px">F</span>
+    <span class="text-white" style="font-size:90px">TEAM</span>
   </div>
   <div class="display-bottomright center padding-large">
     <span class="text-white">15 Adr street, 5015</span>
