--- a/FIREMNÉ VEČIERKY/hlavná-firemná.html
+++ b/FIREMNÉ VEČIERKY/hlavná-firemná.html
@@ -31,7 +31,7 @@
     <div class="row padding black">
         <div class="col-top m3-top ">
           <a href="../hlavná%20stránka.html">
-            <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
+            <img src="../logo/logo1.png" class="block button" style="width: 79px!important;">
           </a>
 
         </div>
