--- a/hlavná stránka.html
+++ b/hlavná stránka.html
@@ -13,7 +13,7 @@
         .bgimg {
             background-position: center;
             background-size: cover;
-            background-image: url("FIREMNÉ VEČIERKY/img/index-firemné/img3.jpg");
+            background-image: url("logo/logo.png");
             min-height: 75%;
         }
 
@@ -30,7 +30,7 @@
 <div class="top">
     <div class="row padding black">
         <div class="col-top m3-top ">
-            <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;">
+            <img src="logo/logo1.png" class="block button" style="width: 79px!important;">
         </div>
         <div class="col m3 ">
             <a href="STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
@@ -55,9 +55,6 @@
     <div class="display-bottomleft center padding-large hide-small">
         <span class="tag">Open from 6am to 5pm</span>
     </div>
-    <div class="display-middle center">
-        <span class="text-white" style="font-size:90px">SOIREE<br>SPECIALIST</span>
-    </div>
     <div class="display-bottomright center padding-large">
         <span class="text-white">15 Adr street, 5015</span>
     </div>
@@ -70,30 +67,28 @@
     <!-- About Container -->
     <div class="container" id="about">
         <div class="content" style="max-width:700px">
-            <h5 class="center padding-64"><span class="tag wide">ABOUT</span></h5>
+            <h5 class="center padding-24"><span class="tag wide">ABOUT</span></h5>
             <p>
-            <h1><b>Soiree Specialist</b></h1> je vaším spoľahlivým partnerom pri organizovaní firemných večierkov, ktoré rozpália váš zmysel pre
-            zábavu a potešia vaše zamestnancov."
+            <h1><b>Soiree Specialist Heaven</b></h1>  Vitajte na našej webovej stránke, ktorá sa špecializuje na organizovanie večierkov, osláv a svadieb!
             </p>
 
             <p>
-                Ponúkame širokú škálu služieb vrátane profesionálneho fotografovania a videografie, DJ a zvukovej techniky,
-                cateringových služieb, dekorácií a osvetlenia a mnoho ďalších. Nechajte naše skúsené tímy vytvoriť atmosféru,
-                ktorá posilní puto medzi vašimi kolegami a poskytne nezabudnuteľné zážitky.
-            </p>
+              Ak chcete, aby vaša svadba alebo oslava zostala nezabudnuteľným zážitkom, ste na správnom mieste.
+              Náš tím profesionálov vám pomôže naplánovať každý detail vášho špeciálneho dňa od začiatku do konca.
+              Od intímnych rodinných osláv po veľké extravagantné svadby, máme skúsenosti s každým typom udalosti.
 
             <div class="panel leftbar light-grey">
                 <p><i>
-                    S Naším tímom môžete mať istotu, že vaše firemné večierky budú plné radosti,
-                    energie a profesionality. Sme tu, aby sme vám pomohli vytvoriť udalosť, ktorá prekvapí
-                    a poteší vašich zamestnancov a posilní spolupatričnosť v tíme.
+                  Vďaka našej kreativite a starostlivému plánovaniu sa uistíme, že každý moment vášho večierku bude úžasný.
+                  Naša široká sieť dodávateľov a kontakty vám zabezpečia tie najlepšie služby a dekorácie pre vašu udalosť.
                 </i></p>
             </div>
             <img src="img/index/img2.jpg" style="width:100%;max-width:1000px" class="margin-top">
             <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
             <p><b>
-                Neváhajte nás kontaktovať pre viac informácií alebo na zarezervovanie vašej nasledujúcej firemnej udalosti.
-                Spoločne vytvoríme večer, na ktorý sa vaši zamestnanci nezabudnuteľne budú spomínať!
+              Nech snívate o romantickom sobáši pod holým nebom alebo o extravagantnom večierku v štýle Gatsbyho,
+              my vám pomôžeme vaše sny premeniť na skutočnosť.
+              Dajte organizáciu večierku alebo svadby na nás a užívajte si svoj veľký deň naplno!
             </b></p>
 
             <h5 class="center padding-24"><span class="tag wide">NÁŠ TÝM</span></h5>
