--- a/STUŽKOVÁ/catering-stuzkove.html
+++ b/STUŽKOVÁ/catering-stuzkove.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="header">
-  <img class="logo" src="../logo/logo1.png" alt="Apple Logo"
+  <img class="logo" src="../logo/logo1.png" alt="Apple Logo">
 
   <ul class="nav">
     <li class="nav-item">
