--- a/STUŽKOVÁ/catering-stuzkove.html
+++ b/STUŽKOVÁ/catering-stuzkove.html
@@ -169,12 +169,12 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #abd0ab;
+    background-color: #FFFFFF;
   }
   .container {
     width: 80%;
     margin: 20px auto;
-    background-color: #ffffff;
+    background-color: #abd0ab;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 50px #8c7e51
