--- a/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
+++ b/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
@@ -2,7 +2,9 @@
 <html lang="sk">
 <head>
   <header class="header">
-    <img  src="../logo/logo.png" alt="Apple Logo"
+    <a href="../hlavná%20stránka.html">
+      <img class="logo" src="../logo/logo1.png" alt="Apple Logo">
+    </a>
          style="width: 40px !important;
               height: 50px !important;">
     <ul class="nav">
