--- a/SVADBA/GDPR-svadba.html
+++ b/SVADBA/GDPR-svadba.html
@@ -14,9 +14,10 @@
 <body>
 
 <header class="header">
-    <img class="logo" src="img-svadba/svadby-img1/svadby-obrazky1/hlavna/galeria/logo1.jpg" alt="Apple Logo"
-         style="width: 40px !important;
-              height: 50px !important;">
+  <a href="../hlavná%20stránka.html">
+    <img class="logo" src="../logo/logo1.png" alt="Apple Logo"  style="width: 40px !important;
+                  height: 50px !important;">
+  </a>
 
     <ul class="nav">
         <li class="nav-item">
