--- a/FIREMNÉ VEČIERKY/projekty-firemné.html
+++ b/FIREMNÉ VEČIERKY/projekty-firemné.html
@@ -131,7 +131,7 @@
 
     <nav>
         <ul>
-            <li><a href="hlavná-firemná.html">Náš tým</a></li>
+            <li><a href="AJAX.html">Náš tým</a></li>
             <li><a href="/contact">Contact Us</a></li>
             <li><a href="/privacy-policy">Privacy Policy</a></li>
         </ul>
